# gentex

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gentex/: cli.py  scaffold.py
src/gentex/doctypes/: article.py  base.py  book.py  notes.py  registry.py
src/gentex/styles/: base.py  cs.py  math.py  ml.py  registry.py
